--- a/project1/templates/project1/main_page.html
+++ b/project1/templates/project1/main_page.html
@@ -25,6 +25,8 @@
   let plot_url = "{{ plot_url }}";
 
 let full_plot_url = "/static/images/" + plot_url;
+
+console.log(full_plot_url);
 </script>
 
 <div class="project-page-wrapper">
