--- a/project1/templates/project1/main_page.html
+++ b/project1/templates/project1/main_page.html
@@ -26,7 +26,7 @@
 
 let full_plot_url = "/static/images/" + plot_url;
 
-console.log(full_plot_url);
+console.log(full_plot_url)
 </script>
 
 <div class="project-page-wrapper">
