--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -46,7 +46,7 @@
     <p class="home-subtitle">A list of projects that are focused on computational analysis.</p>
 
     <div class='card-container'>
-        <a href="{% url 'project1:intro' %}">
+        <a href="#">
         
         <div class="card-wrap">
 
@@ -72,7 +72,7 @@
         <hr>
 
     <div class='card-container'>
-        <a href="{% url 'project2:intro' %}">
+        <a href="#">
             <div class="card-wrap">
 
                 <div class="card-img">
