--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -48,8 +48,8 @@
             
             
             <ul class="nav_links my_navbar centering hamburger">
-                <li ><a href="{% url 'project1:intro' %}">Project Simple Grapher</a></li>
-                <li><a href="{% url 'project2:intro' %}">Project Text Analyzer</a></li>
+                <!-- <li ><a href="{% url 'project1:intro' %}">Project Simple Grapher</a></li>
+                <li><a href="{% url 'project2:intro' %}">Project Text Analyzer</a></li> -->
 
                 <li><a href="{% url 'app1:app1-about' %}">About</a></li>
                 
@@ -111,9 +111,9 @@
             
             
                 <ul id="drop_menu_list" class="drop_menu_list" >
-                    <li ><a href="{% url 'project1:intro' %}">Project Simple Grapher</a></li>
-                    <li><a href="{% url 'project2:intro' %}">Project Text Analyzer</a></li>
-                    <li><a href="https://haideralrustem.github.io/" target="_blank">About</a></li>
+                    <!-- <li ><a href="{% url 'project1:intro' %}">Project Simple Grapher</a></li>
+                    <li><a href="{% url 'project2:intro' %}">Project Text Analyzer</a></li> -->
+                    <li><a href="{% url 'app1:app1-about' %}" target="_blank">About</a></li>
                     
                 </ul>
 
