--- a/app1/static/app1/mystyles.css
+++ b/app1/static/app1/mystyles.css
@@ -487,7 +487,7 @@ h4.text-gp {
     margin-left: 1.5%;
     margin-right: 1.5%;
     padding: 1% 2%;
-    height: 21.5vw;
+    height: auto;
     width: 95%;
     /*box-shadow: [horizontal offset] [vertical offset] [blur radius] [optional spread radius] [color];*/
     border: 1px ridge #06b7fc;
@@ -504,12 +504,12 @@ h4.text-gp {
 }
 
 .card-wrap:hover .card-img {
-    width: 30%;
+    width: 95%;
     height: 100%;
 }
 
 .card-img {
-    width: 30%;
+    width: 90%;
     height: 100%;
     margin-right: 2%;
     transition: width 0.4s, height 0.4s, border 0.4s;
@@ -523,6 +523,10 @@ h4.text-gp {
 
 .card-text-content {
     /* width: 100%; */
+}
+
+.text-analyzer-card {
+    display: none;
 }
 
 
