--- a/project1/templates/project1/food_suggester.html
+++ b/project1/templates/project1/food_suggester.html
@@ -27,7 +27,7 @@
 
   <div class="file-uploader">
 
-      <span class="tooltiptext">
+      <span class="">
         <p>
         Powered by <a href="https://foodish-api.herokuapp.com/" target="_blank">Foodish API</a>
         </p>
