--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -42,10 +42,61 @@
 
 <!--& c:/Users/xario/PycharmProjects/django_app/venv/Scripts/Activate.ps1 ; cd haider_site ; python manage.py runserver-->
 <div class="home-wrap">
-    <h2 class="home-title"> Analytical Projects: </h2>
-    <p class="home-subtitle">A list of projects that are focused on computational analysis.</p>
+    <h2 class="home-title"> Projects: </h2>
+    <p class="home-subtitle">A list of projects I built.</p>
 
-    <div class='card-container'>
+
+    <div class='card-container analyzer-card'>
+        <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">
+        
+        <div class="card-wrap">
+
+            <div class="card-img">
+                <img class="card-img-photo" src="{% static 'images/simple_grapher_thumbnail.png' %}">
+            </div>
+            <!-- -->
+            <div class="card-text-content">
+                <div class="card-text-title"><h4><p><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">Simple</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">GRAPHER</span></h4></div>
+                <hr>
+                <div class="card-text-body">
+                    <p><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">Simple</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">GRAPHER</span>
+                        is a tool that lets you generate quick graphs from data. </p>
+                        
+                </div>
+            </div>
+            
+        </div>
+
+        </a>
+    </div>
+
+
+
+    <hr>
+
+
+    <div class='card-container analyzer-card'>
+        <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">
+            <div class="card-wrap">
+
+                <div class="card-img">
+                    <img class="card-img-photo" src="{% static 'images/text_analysis_thumbnail.png' %}">
+                </div>
+                <!-- -->
+                <div class="card-text-content">
+                    <div class="card-text-title"><h4><span class="tcard-title-brand">Text Analyzer</span></h4></div>
+                    <hr>
+                    <div class="card-text-body"><p>Generates an analytical summary of any entered text</p></div>
+                </div>
+                
+            </div>
+        </a>
+    </div>
+
+    <hr>
+
+
+    <div class='card-container food_suggester'>
         <a href="{% url 'project1:food_suggester' %}">
         
         <div class="card-wrap">
@@ -71,25 +122,15 @@
         </a>
     </div>
 
-        <hr>
 
-    <div class='card-container text-analyzer-card'>
-        <a href="#">
-            <div class="card-wrap">
 
-                <div class="card-img">
-                    <img class="card-img-photo" src="{% static 'images/text_analysis_thumbnail.png' %}">
-                </div>
-                <!-- -->
-                <div class="card-text-content">
-                    <div class="card-text-title"><h4><span class="tcard-title-brand">Text Analyzer</span></h4></div>
-                    <hr>
-                    <div class="card-text-body"><p>Generates an analytical summary of any entered text</p></div>
-                </div>
-                
-            </div>
-        </a>
-    </div>
+    
+
+
+
+
+
+
 
     
 
@@ -98,6 +139,27 @@
     <!-- to add a new card, create a row (houses two cards), then put it in .card-wrap-vertical -->
         
     <div class="row-vertical">
+        <div class="frame-limiter analyzer-card">
+            <div class="card-wrap-vertical hover-border">
+
+                <div class="card-img">
+                    <img class="card-img-photo" src="{% static 'images/simple_grapher_thumbnail.png' %}">
+                </div>
+                <!-- -->
+                <div class="card-text-content">
+                    <div class="card-text-title">
+                        <h4><span class="tcard-title-brand">Text Analyzer</span></h4>
+                    </div>
+                    <hr>
+                    <div class="card-text-body">
+                        <p>Generates an analytical summary of any entered text</p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+
         <div class="frame-limiter">
             <a href="{% url 'project1:food_suggester' %}">
             <div class="card-wrap-vertical hover-border">
@@ -123,7 +185,7 @@
             </a>
         </div>
     
-        <div class="frame-limiter text-analyzer-card">
+        <div class="frame-limiter analyzer-card">
             <div class="card-wrap-vertical hover-border">
 
                 <div class="card-img">
