--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -48,9 +48,9 @@
             
             
             <ul class="nav_links my_navbar centering hamburger">
-                 <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
-                <!--<li><a href="{% url 'project2:intro' %}">Project Text Analyzer</a></li> -->
-
+                <li ><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li>
+                <li><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li>
+                <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
                 <li><a href="{% url 'app1:app1-about' %}">About</a></li>
                 
             </ul>
@@ -111,8 +111,10 @@
             
             
                 <ul id="drop_menu_list" class="drop_menu_list" >
+                    <li><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li> 
+                    <li><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li> 
                     <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
-                    <!-- <li><a href="{% url 'project2:intro' %}">Project Text Analyzer</a></li> --> 
+                    
                     <li><a href="{% url 'app1:app1-about' %}" target="_blank">About</a></li>
                     
                 </ul>
@@ -192,12 +194,17 @@
 
         <div class="site-map">
             <div class="site-map-column">
-                <p class="site-map-column-title">Analytical Projects</p>
+                <p class="site-map-column-title">Projects</p>
+                <p class="site-map-column-subtitle">
+                    <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">Simple Grapher</a>
+                </p>
+               
+                <p class="site-map-column-subtitle">
+                    <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">Text Analyzer</a>
+                </p>
+
                 <p class="site-map-column-subtitle">
                     <a href="{% url 'project1:food_suggester' %}">Food Suggester</a>
-                </p>
-                <p class="site-map-column-subtitle">
-                    <a href="{% url 'project2:intro' %}">Text Analyzer(under construction)</a>
                 </p>
                 
             </div>
