--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -48,8 +48,8 @@
             
             
             <ul class="nav_links my_navbar centering hamburger">
-                <li ><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li>
-                <li><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li>
+                <li ><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li>
+                <li><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li>
                 <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
                 <li><a href="{% url 'app1:app1-about' %}">About</a></li>
                 
@@ -111,8 +111,8 @@
             
             
                 <ul id="drop_menu_list" class="drop_menu_list" >
-                    <li><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li> 
-                    <li><a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li> 
+                    <li><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li> 
+                    <li><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li> 
                     <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
                     
                     <li><a href="{% url 'app1:app1-about' %}" target="_blank">About</a></li>
@@ -196,11 +196,11 @@
             <div class="site-map-column">
                 <p class="site-map-column-title">Projects</p>
                 <p class="site-map-column-subtitle">
-                    <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">Simple Grapher</a>
+                    <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">Simple Grapher</a>
                 </p>
                
                 <p class="site-map-column-subtitle">
-                    <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">Text Analyzer</a>
+                    <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project2">Text Analyzer</a>
                 </p>
 
                 <p class="site-map-column-subtitle">
