--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -47,7 +47,7 @@
 
 
     <div class='card-container analyzer-card'>
-        <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project1/intro">
+        <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">
         
         <div class="card-wrap">
 
@@ -76,7 +76,7 @@
 
 
     <div class='card-container analyzer-card'>
-        <a href="http://ec2-35-166-11-177.us-west-2.compute.amazonaws.com/project2">
+        <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com//project2">
             <div class="card-wrap">
 
                 <div class="card-img">
