--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -136,77 +136,94 @@
 
     <div class="container-vertical">
     
-    <!-- to add a new card, create a row (houses two cards), then put it in .card-wrap-vertical -->
+        <!-- to add a new card, create a row (houses two cards), then put it in .card-wrap-vertical -->
+            
+        <div class="row-vertical">
+            
+            <div class="frame-limiter analyzer-card">
+                <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">
+                <div class="card-wrap-vertical hover-border">
+    
+                    <div class="card-img">
+                        <img class="card-img-photo" src="{% static 'images/simple_grapher_thumbnail.png' %}">
+                    </div>
+                    <!-- -->
+                    <div class="card-text-content">
+                        <div class="card-text-title">
+                            <h4><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">Simple</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">GRAPHER</span></h4>
+                        </div>
+                        <hr>
+                        <div class="card-text-body">
+                            <p>  is a tool that lets you generate quick graphs from data.</p>
+                        </div>
+                    </div>
+                    
+                </div>
+    
+                </a>
+            </div>
+    
+    
+            <div class="frame-limiter">
+                <a href="https://haiderapps.herokuapp.com/project1/food_suggester">
+                <div class="card-wrap-vertical hover-border">
+    
+                    <div class="card-img">
+                        <img class="card-img-photo" src="{% static 'images/food_thumbnail_mod.png' %}">
+                    </div>
+                    <!-- -->
+                    <div class="card-text-content">
+                        <div class="card-text-title">
+                            <h4><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">FOOD</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">SUGGESTER</span></h4>
+                        </div>
+    
+                        <hr>
+                        <div class="card-text-body">
+                            <p><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">FOOD</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">SUGGESTER</span>
+                                Useful for when you need quick food ideas and can't decide </p>
+                            
+                        </div>
+                    </div>
+                    
+                </div>
+                </a>
+            </div>
         
-    <div class="row-vertical">
-        <div class="frame-limiter analyzer-card">
-            <div class="card-wrap-vertical hover-border">
-
-                <div class="card-img">
-                    <img class="card-img-photo" src="{% static 'images/simple_grapher_thumbnail.png' %}">
-                </div>
-                <!-- -->
-                <div class="card-text-content">
-                    <div class="card-text-title">
-                        <h4><span class="tcard-title-brand">Text Analyzer</span></h4>
+    
+    
+            <div class="frame-limiter analyzer-card">
+    
+                <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com//project2">
+    
+                <div class="card-wrap-vertical hover-border">
+    
+                    <div class="card-img">
+                        <img class="card-img-photo" src="{% static 'images/text_analysis_thumbnail.png' %}">
                     </div>
-                    <hr>
-                    <div class="card-text-body">
-                        <p>Generates an analytical summary of any entered text</p>
+                    <!-- -->
+                    <div class="card-text-content">
+                        <div class="card-text-title">
+                            <h4><span class="tcard-title-brand">Text Analyzer</span></h4>
+                        </div>
+                        <hr>
+                        <div class="card-text-body">
+                            <p>Generates an analytical summary of any entered text</p>
+                        </div>
                     </div>
+                    
                 </div>
-                
+    
+                </a>
             </div>
-        </div>
-
-
-        <div class="frame-limiter">
-            <a href="{% url 'project1:food_suggester' %}">
-            <div class="card-wrap-vertical hover-border">
-
-                <div class="card-img">
-                    <img class="card-img-photo" src="{% static 'images/food_thumbnail_mod.png' %}">
-                </div>
-                <!-- -->
-                <div class="card-text-content">
-                    <div class="card-text-title">
-                        <h4><p><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">Simple</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">GRAPHER</span></h4>
-                    </div>
-
-                    <hr>
-                    <div class="card-text-body">
-                        <p><span style="font-weight: bold;color: #FF7F0E;font-style: italic;">Simple</span><span style="font-style: italic; font-weight: bold; color: #1F77B4">GRAPHER</span>
-                            is a tool that lets you generate quick graphs from data. </p>
-                        
-                    </div>
-                </div>
-                
-            </div>
-            </a>
+    
+    
         </div>
     
-        <div class="frame-limiter analyzer-card">
-            <div class="card-wrap-vertical hover-border">
-
-                <div class="card-img">
-                    <img class="card-img-photo" src="{% static 'images/text_analysis_thumbnail.png' %}">
-                </div>
-                <!-- -->
-                <div class="card-text-content">
-                    <div class="card-text-title">
-                        <h4><span class="tcard-title-brand">Text Analyzer</span></h4>
-                    </div>
-                    <hr>
-                    <div class="card-text-body">
-                        <p>Generates an analytical summary of any entered text</p>
-                    </div>
-                </div>
-                
-            </div>
         </div>
-    </div>
 
-    </div>
+
+
+
 </div>
 
     
