--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -41,16 +41,16 @@
 
             <div class="nav_together">
 
-                <a class="logo-img" href="{% url 'app1:app1-home' %}">
+                <a class="logo-img" href="{{home_url}}">
                     <img class="logo-img" src="{% get_media_prefix %}my_logo2.png">
                 </a>
             
             
             
             <ul class="nav_links my_navbar centering hamburger">
-                <li ><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li>
-                <li><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li>
-                <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
+                <li ><a href="{{project1_url}}">Project Simple Grapher</a></li>
+                <li><a href="{{project2_url}}">Project Text Analyzer</a></li>
+                <li ><a href="{{food_suggester_url}}">Project Food Suggester</a></li>
                 <li><a href="{% url 'app1:app1-about' %}">About</a></li>
                 
             </ul>
@@ -111,9 +111,9 @@
             
             
                 <ul id="drop_menu_list" class="drop_menu_list" >
-                    <li><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">Project Simple Grapher</a></li> 
-                    <li><a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project2">Project Text Analyzer</a></li> 
-                    <li ><a href="{% url 'project1:food_suggester' %}">Project Food Suggester</a></li>
+                    <li><a href="{{project1_url}}">Project Simple Grapher</a></li> 
+                    <li><a href="{{project2_url}}">Project Text Analyzer</a></li> 
+                    <li ><a href="{{food_suggester_url}}">Project Food Suggester</a></li>
                     
                     <li><a href="{% url 'app1:app1-about' %}" target="_blank">About</a></li>
                     
@@ -161,7 +161,7 @@
         
         <div class="footer-row-wrap">
             <div id='first-footer-row' class="my-row footer-row"> 
-                <div class="footer-item footer-button"><a href="{% url 'app1:app1-home' %}">Home</a></div>
+                <div class="footer-item footer-button"><a href="{{home_url}}">Home</a></div>
                 <div class="footer-item footer-button"><a href="{% url 'app1:app1-about' %}">About</a></div>
                 <div class="footer-item footer-button"><a href="https://haideralrustem.github.io/#/contact" target="_blank">Contact</a></div>
                 <div class="footer-item footer-button" style="width:30%"><a href="https://haideralrustem.github.io/" target="_blank">Landing Page</a></div>
@@ -196,15 +196,15 @@
             <div class="site-map-column">
                 <p class="site-map-column-title">Projects</p>
                 <p class="site-map-column-subtitle">
-                    <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project1/intro">Simple Grapher</a>
+                    <a href="{{project1_url}}">Simple Grapher</a>
                 </p>
                
                 <p class="site-map-column-subtitle">
-                    <a href="http://ec2-13-58-70-58.us-east-2.compute.amazonaws.com/project2">Text Analyzer</a>
+                    <a href="{{project2_url}}">Text Analyzer</a>
                 </p>
 
                 <p class="site-map-column-subtitle">
-                    <a href="{% url 'project1:food_suggester' %}">Food Suggester</a>
+                    <a href="{{food_suggester_url}}">Food Suggester</a>
                 </p>
                 
             </div>
