--- a/app1/templates/app1/home.html
+++ b/app1/templates/app1/home.html
@@ -47,7 +47,7 @@
 
 
     <div class='card-container analyzer-card'>
-        <a href="{{project1_url}}">
+        <a href="{{url_context.project1_url}}">
         
         <div class="card-wrap">
 
@@ -76,7 +76,7 @@
 
 
     <div class='card-container analyzer-card'>
-        <a href="{{project2_url}}">
+        <a href="{{url_context.project2_url}}">
             <div class="card-wrap">
 
                 <div class="card-img">
@@ -97,7 +97,7 @@
 
 
     <div class='card-container food_suggester'>
-        <a href="{{food_suggester_url}}">
+        <a href="{{url_context.food_suggester_url}}">
         
         <div class="card-wrap">
 
@@ -141,7 +141,7 @@
     <div class="row-vertical">
         
         <div class="frame-limiter analyzer-card">
-            <a href="{{project1_url}}">
+            <a href="{{url_context.project1_url}}">
             <div class="card-wrap-vertical hover-border">
 
                 <div class="card-img">
@@ -165,7 +165,7 @@
 
 
         <div class="frame-limiter">
-            <a href="{{food_suggester_url}}">
+            <a href="{{url_context.food_suggester_url}}">
             <div class="card-wrap-vertical hover-border">
 
                 <div class="card-img">
@@ -193,7 +193,7 @@
 
         <div class="frame-limiter analyzer-card">
 
-            <a href="{{project2_url}}">
+            <a href="{{url_context.project2_url}}">
 
             <div class="card-wrap-vertical hover-border">
 
